[tool.poetry]
name = "agent1"
version = "0.1.0"
description = "LangChain Agent with ReAct"
authors = ["Vishnu Sangadala"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"